--- a/.gitignore
+++ b/.gitignore
@@ -1,104 +1,38 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+#ΕΡΓΑΣΙΑ 1: AΘΡΟΙΣΜΑ ΔΙΑΣΤΗΜΑΤΩΝ
+while True:
+   	arxh = int(input("Dwste thn arxh tou diasthmatos: "))
+    telos = int(input("Dwste to telos tou diasthmatos: "))
+    list=[[arxh,telos]]
+    while True:
+	
+        print("An oloklhrwsete thn eisagwgh diasthmatwn eisagete duo fores to '0'")
+	
+        arxh = int(input("Dwste thn arxh tou diasthmatos: "))
+        telos = int(input("Dwste to telos tou diasthmatos: "))
+	
+        if arxh<telos:
+            list.append([arxh,telos])
+        elif arxh>telos:
+            print("Error: Try again!")
+        elif arxh==0 and telos==0:        
+            break	
 
-# C extensions
-*.so
+    list.sort()
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+    sum = int(list[0][1]-list[0][0])
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
+    for i in range(1,len(list)):
+    
+        if list[i][0]>list[i-1][1]:
+            sum+= (list[i][1]-list[i][0])
+        else:
+            if list[i][1]>list[i-1][1]:
+                sum= sum + (list[i][1]-list[i-1][1])
+		
+    print( 'To athroisma tou mhkous twn diasthmatwn einai: ' , sum)
+    print("Pieste 'ENTER' gia na ksanadwsete lista.")
+    answer=str(input())
+    if answer!="": 
+        break
+    
